--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
     "react": "16.4.1",
     "react-native": "0.56.0",
     "react-native-i18n": "2.0.15",
+    "react-native-vector-icons": "5.0.0",
     "react-navigation": "2.13.0"
   },
   "devDependencies": {
+    "babel-eslint": "9.0.0",
     "babel-jest": "23.4.2",
     "babel-preset-react-native": "^5",
+    "eslint": "^5.5.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
     "jest": "23.5.0",
     "react-test-renderer": "16.4.1"
   },
