--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "16.4.1",
     "react-native": "0.56.0",
     "react-native-i18n": "2.0.15",
+    "react-native-modal": "^6.5.0",
+    "react-native-pie-chart": "^1.0.13",
     "react-native-vector-icons": "5.0.0",
     "react-navigation": "2.13.0"
   },
