--- a/package.json
+++ b/package.json
@@ -7,20 +7,20 @@
     "test": "jest"
   },
   "dependencies": {
-    "react-native-elements": "^0.19.1",
-    "react-native-phone-input": "^0.2.1",
-    "prop-types": "15.6.2",
+    "babel-preset-react-native": "^2.1.0",
     "react": "16.4.1",
-    "react-native": "0.56.0",
-    "react-native-blur": "3.2.2",
+    "react-native": "^0.55.4",
+    "react-native-blur": "^3.2.2",
+    "react-native-elements": "^0.19.1",
     "react-native-i18n": "2.0.15",
     "react-native-linear-gradient": "2.4.0",
-    "react-native-modal": "6.5.0",
+    "react-native-modal": "^6.5.0",
+    "react-native-phone-input": "^0.2.1",
     "react-native-vector-icons": "5.0.0",
     "react-navigation": "2.13.0"
   },
   "devDependencies": {
-    "babel-eslint": "9.0.0",
+    "babel-eslint": "^9.0.0",
     "babel-jest": "23.4.2",
     "eslint": "^5.5.0",
     "eslint-config-airbnb": "^17.1.0",
