--- a/ios/mango_wallet/Info.plist
+++ b/ios/mango_wallet/Info.plist
@@ -68,5 +68,7 @@
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
 	</array>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Enabling Face ID allows you quick and secure access to your account.</string>
 </dict>
 </plist>
