--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-i18n": "2.0.15",
     "react-native-linear-gradient": "2.4.0",
     "react-native-modal": "6.5.0",
+    "react-native-touch-id": "4.0.5",
     "react-native-vector-icons": "5.0.0",
     "react-navigation": "2.13.0"
   },
