--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "react": "16.4.1",
     "react-native": "^0.55.4",
     "react-native-blur": "^3.2.2",
+    "react-native-country-picker-modal": "^0.6.2",
     "react-native-elements": "^0.19.1",
     "react-native-i18n": "2.0.15",
     "react-native-linear-gradient": "2.4.0",
     "react-native-modal": "^6.5.0",
     "react-native-phone-input": "^0.2.1",
+    "react-native-switch": "^1.5.0",
     "react-native-vector-icons": "5.0.0",
     "react-navigation": "2.13.0"
   },
