--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "react-native-country-picker-modal": "^0.6.2",
     "react-native-elements": "^0.19.1",
     "react-native-i18n": "2.0.15",
-    "react-native-pie-chart": "^1.0.13",
     "react-native-linear-gradient": "2.4.0",
-    "react-native-phone-input": "^0.2.1",
-    "react-native-switch": "^1.5.0",
     "react-native-modal": "6.5.0",
+    "react-native-phone-input": "^0.2.1",
+    "react-native-pie-chart": "^1.0.13",
+    "react-native-root-toast": "3.0.1",
+    "react-native-switch": "^1.5.0",
     "react-native-touch-id": "4.0.5",
     "react-native-vector-icons": "5.0.0",
-    "react-navigation": "2.13.0"
+    "react-navigation": "2.13.0",
+    "redux": "4.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
