--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "core-js": "^2.5.7",
+    "crypto-js": "3.1.9-1",
     "react": "16.4.1",
     "react-native": "0.56.0",
     "react-native-blur": "^3.2.2",
     "react-native-country-picker-modal": "^0.6.2",
+    "react-native-dotenv": "0.2.0",
     "react-native-elements": "^0.19.1",
     "react-native-i18n": "2.0.15",
+    "react-native-keychain": "3.0.0",
     "react-native-linear-gradient": "2.4.0",
     "react-native-modal": "6.5.0",
     "react-native-pathjs-charts": "0.0.34",
@@ -21,7 +25,7 @@
     "react-native-switch": "^1.5.0",
     "react-native-touch-id": "4.0.5",
     "react-native-vector-icons": "5.0.0",
-    "react-navigation": "2.13.0",
+    "react-navigation": "2.16.0",
     "redux": "4.0.0"
   },
   "devDependencies": {
