--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-modal": "6.5.0",
     "react-native-phone-input": "^0.2.1",
     "react-native-pie-chart": "^1.0.13",
+    "react-native-restart": "0.0.7",
     "react-native-root-toast": "3.0.1",
     "react-native-switch": "^1.5.0",
     "react-native-touch-id": "4.0.5",
