--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "dependencies": {
     "core-js": "^2.5.7",
     "crypto-js": "3.1.9-1",
+    "laravel-echo": "^1.4.0",
+    "lodash": "^4.17.11",
+    "microevent": "^1.0.0",
     "react": "16.4.1",
     "react-native": "0.56.0",
     "react-native-blur": "^3.2.2",
@@ -27,7 +30,8 @@
     "react-native-touch-id": "4.0.5",
     "react-native-vector-icons": "5.0.0",
     "react-navigation": "2.16.0",
-    "redux": "4.0.0"
+    "redux": "4.0.0",
+    "socket.io-client": "^2.1.1"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
