--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "0.18.0",
     "core-js": "^2.5.7",
     "crypto-js": "3.1.9-1",
+    "ethers": "3.0.29",
+    "lodash": "4.17.11",
     "react": "16.4.1",
     "react-native": "0.56.0",
     "react-native-blur": "^3.2.2",
@@ -21,13 +24,15 @@
     "react-native-modal": "6.5.0",
     "react-native-pathjs-charts": "0.0.34",
     "react-native-phone-input": "^0.2.1",
+    "react-native-qrcode-svg": "5.1.1",
     "react-native-restart": "0.0.7",
     "react-native-root-toast": "3.0.1",
     "react-native-switch": "^1.5.0",
     "react-native-touch-id": "4.0.5",
     "react-native-vector-icons": "5.0.0",
     "react-navigation": "2.16.0",
-    "redux": "4.0.0"
+    "redux": "4.0.0",
+    "url-join": "4.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
