--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@haskkor/react-native-pincode": "^1.6.4",
     "core-js": "^2.5.7",
     "crypto-js": "3.1.9-1",
     "react": "16.4.1",
