--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "axios": "0.18.0",
     "core-js": "^2.5.7",
     "crypto-js": "3.1.9-1",
+    "ethers": "3.0.29",
     "laravel-echo": "^1.4.0",
     "lodash": "^4.17.11",
     "microevent": "^1.0.0",
-    "ethers": "3.0.29",
+    "moment": "2.22.2",
     "react": "16.4.1",
     "react-native": "0.56.0",
     "react-native-blur": "^3.2.2",
