--- a/package.json
+++ b/package.json
@@ -8,15 +8,13 @@
   },
   "dependencies": {
     "@haskkor/react-native-pincode": "^1.6.4",
-    "axios": "0.18.0",
+    "react-native": "0.56.0",
     "core-js": "^2.5.7",
     "crypto-js": "3.1.9-1",
+    "ethers": "^3.0.29",
     "laravel-echo": "^1.4.0",
-    "lodash": "^4.17.11",
     "microevent": "^1.0.0",
-    "ethers": "3.0.29",
     "react": "16.4.1",
-    "react-native": "0.56.0",
     "react-native-blur": "^3.2.2",
     "react-native-country-picker-modal": "^0.6.2",
     "react-native-dotenv": "0.2.0",
@@ -27,7 +25,7 @@
     "react-native-modal": "6.5.0",
     "react-native-pathjs-charts": "0.0.34",
     "react-native-phone-input": "^0.2.1",
-    "react-native-qrcode-svg": "5.1.1",
+    "react-native-qrcode-svg": "^5.1.1",
     "react-native-restart": "0.0.7",
     "react-native-root-toast": "3.0.1",
     "react-native-switch": "^1.5.0",
@@ -35,8 +33,7 @@
     "react-native-vector-icons": "5.0.0",
     "react-navigation": "2.16.0",
     "redux": "4.0.0",
-    "socket.io-client": "^2.1.1",
-    "url-join": "4.0.0"
+    "socket.io-client": "^2.1.1"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
