--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@haskkor/react-native-pincode": "^1.6.4",
-    "react-native": "0.56.0",
+    "axios": "^0.18.0",
     "core-js": "^2.5.7",
     "crypto-js": "3.1.9-1",
     "ethers": "3.0.29",
@@ -16,6 +16,7 @@
     "microevent": "^1.0.0",
     "moment": "2.22.2",
     "react": "16.4.1",
+    "react-native": "0.56.0",
     "react-native-blur": "^3.2.2",
     "react-native-country-picker-modal": "^0.6.2",
     "react-native-dotenv": "0.2.0",
