Change main screen

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-API_SERVER=http://vcc.sotatek.com
+API_SERVER=http://mango.sotatek.com
 SOCKET_SERVER=ws://vcc.sotatek.com:6001
-CLIENT_SECRET=nFzLk7YjUzI2Qorhb43etp7ZSZYMdJ1PiJJUtWbN
-ASSET_SERVER=http://vcc.sotatek.com
+CLIENT_SECRET=StlCjFYGWaqV6A1z3Rd01K2aEM2bsD5cVCBK7xhF
+ASSET_SERVER=http://mango.sotatek.com
 SUPPORT_URL =https://support.vcc.exchange/hc/en-us
 ABOUT_URL =https://vcc.exchange/about
 DEV=true
