--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-randombytes": "3.5.1",
     "react-native-restart": "0.0.7",
     "react-native-root-toast": "3.0.1",
+    "react-native-share": "^1.1.2",
     "react-native-switch": "^1.5.0",
     "react-native-touch-id": "4.0.5",
     "react-native-vector-icons": "5.0.0",
