--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-restart": "0.0.7",
     "react-native-root-toast": "3.0.1",
     "react-native-share": "^1.1.2",
+    "react-native-simple-radio-button": "^2.7.3",
     "react-native-switch": "^1.5.0",
     "react-native-touch-id": "4.0.5",
     "react-native-vector-icons": "5.0.0",
