--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@haskkor/react-native-pincode": "^1.6.4",
     "axios": "0.18.0",
     "babel-polyfill": "6.26.0",
+    "bignumber.js": "7.2.1",
     "bip39": "https://github.com/Sotatek-NhuanHoang/bip39",
     "browserify": "16.2.3",
     "core-js": "^2.5.7",
     "crypto-js": "3.1.9-1",
+    "ethereumjs-util": "5.2.0",
+    "ethereumjs-wallet": "0.6.2",
     "ethers": "3.0.29",
     "hdkey": "1.1.0",
     "laravel-echo": "^1.4.0",
