--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "mango_wallet",
   "version": "0.0.1",
+  "rnpm": {
+    "assets": [
+      "./assets/fonts"
+    ]
+  },
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
