--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-country-picker-modal": "^0.6.2",
     "react-native-dotenv": "0.2.0",
     "react-native-elements": "^0.19.1",
+    "react-native-flexi-radio-button": "^0.2.2",
     "react-native-i18n": "2.0.15",
     "react-native-keychain": "3.0.0",
     "react-native-linear-gradient": "2.4.0",
