Create wallet in background thread

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -139,6 +139,7 @@ android {
 }
 
 dependencies {
+    compile project(':nodejs-mobile-react-native')
     compile project(':react-native-share')
     compile project(':react-native-randombytes')
     compile project(':react-native-keychain')
