--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "hdkey": "1.1.0",
     "laravel-echo": "^1.4.0",
     "lodash": "4.17.11",
+    "metro": "^0.48.1",
+    "metro-config": "^0.48.1",
     "microevent": "^1.0.0",
     "moment": "2.22.2",
     "node-libs-react-native": "https://github.com/Sotatek-NhuanHoang/node-libs-react-native",
+    "nodejs-mobile-react-native": "^0.3.0",
     "react": "16.4.1",
     "react-native": "0.56.0",
     "react-native-blur": "^3.2.2",
