--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -150,6 +150,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-fbsdk')
+    implementation 'com.facebook.android:facebook-android-sdk:4.34.0'
     compile project(':nodejs-mobile-react-native')
     compile project(':react-native-share')
     compile project(':react-native-randombytes')
@@ -163,7 +165,7 @@ dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     compile "com.facebook.react:react-native:+"  // From node_modules
-     compile project(':react-native-restart')
+    compile project(':react-native-restart')
 }
 
 // Run this once to be able to run the application with BUCK
