--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-country-picker-modal": "^0.6.2",
     "react-native-dotenv": "0.2.0",
     "react-native-elements": "^0.19.1",
+    "react-native-fbsdk": "0.8.0",
     "react-native-flexi-radio-button": "^0.2.2",
     "react-native-i18n": "2.0.15",
     "react-native-keychain": "3.0.0",
