--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -167,6 +167,7 @@ dependencies {
     compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     compile "com.facebook.react:react-native:+"  // From node_modules
     compile project(':react-native-restart')
+    compile project(':react-native-image-picker')
 }
 
 // Run this once to be able to run the application with BUCK
