--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-fbsdk": "0.8.0",
     "react-native-flexi-radio-button": "^0.2.2",
     "react-native-i18n": "2.0.15",
+    "react-native-image-picker": "^0.27.1",
     "react-native-keychain": "3.0.0",
     "react-native-linear-gradient": "2.4.0",
     "react-native-modal": "6.5.0",
