--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'MangoWallet'
+include ':react-native-toasty'
+project(':react-native-toasty').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-toasty/android')
 include ':react-native-splash-screen'
 project(':react-native-splash-screen').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-splash-screen/android')
 include ':react-native-device-info'
