--- a/package.json
+++ b/package.json
@@ -52,12 +52,11 @@
     "react-native-qrcode-svg": "5.1.1",
     "react-native-randombytes": "3.5.1",
     "react-native-restart": "0.0.7",
-    "react-native-root-toast": "3.0.1",
     "react-native-share": "^1.1.2",
-    "react-native-simple-radio-button": "^2.7.3",
     "react-native-spinkit": "1.1.1",
     "react-native-splash-screen": "^3.1.1",
     "react-native-switch": "^1.5.0",
+    "react-native-toasty": "0.0.4",
     "react-native-touch-id": "https://github.com/Sotatek-ManhPham/react-native-touch-id.git",
     "react-native-vector-icons": "5.0.0",
     "react-navigation": "2.16.0",
