--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'MangoWallet'
+include ':react-native-text-input-mask'
+project(':react-native-text-input-mask').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-text-input-mask/android')
 include ':react-native-toasty'
 project(':react-native-toasty').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-toasty/android')
 include ':react-native-splash-screen'
