--- a/package.json
+++ b/package.json
@@ -9,7 +9,16 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "android": "node node_modules/react-native/local-cli/cli.js run-android",
+    "ios": "node node_modules/react-native/local-cli/cli.js run-ios",
+    "ios-6": "node node_modules/react-native/local-cli/cli.js run-ios --simulator \"iPhone 6\"",
+    "ios-x": "node node_modules/react-native/local-cli/cli.js run-ios --simulator \"iPhone X\"",
+    "build:android": "rm -rf ./android/build && cd android && ./gradlew assembleRelease",
+    "build:ios": "react-native bundle --entry-file='index.js' --bundle-output='./ios/wallet/main.jsbundle' --dev=false --platform='ios' --assets-dest='./ios'",
+    "shake": "adb shell input keyevent 82",
+    "postinstall": "cd nodejs-assets/nodejs-project/ && npm install",
+    "kill": "sudo kill $(lsof -t -i:8081)"
   },
   "dependencies": {
     "@haskkor/react-native-pincode": "https://github.com/Sotatek-AnhNguyen/react-native-pincode.git",
@@ -27,15 +36,12 @@
     "hdkey": "1.1.0",
     "laravel-echo": "^1.4.0",
     "lodash": "4.17.11",
-    "metro": "^0.48.1",
-    "metro-config": "^0.48.1",
     "microevent": "^1.0.0",
     "moment": "2.22.2",
     "node-libs-react-native": "https://github.com/Sotatek-NhuanHoang/node-libs-react-native",
     "nodejs-mobile-react-native": "0.3.0",
     "react": "16.4.1",
     "react-native": "0.56.0",
-    "react-native-blur": "^3.2.2",
     "react-native-country-picker-modal": "^0.6.2",
     "react-native-device-info": "^0.24.3",
     "react-native-dotenv": "0.2.0",
@@ -58,7 +64,6 @@
     "react-native-switch": "^1.5.0",
     "react-native-toasty": "0.0.4",
     "react-native-touch-id": "https://github.com/Sotatek-ManhPham/react-native-touch-id.git",
-    "react-native-text-input-mask": "git+https://github.com/sotatek-dev/react-native-text-input-mask.git",
     "react-native-vector-icons": "5.0.0",
     "react-navigation": "2.16.0",
     "readable-stream": "3.0.3",
