Config offline app

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -150,6 +150,7 @@ android {
 }
 
 dependencies {
+    compile project(':lottie-react-native')
     compile project(':nodejs-mobile-react-native')
     compile project(':react-native-toasty')
     compile project(':react-native-splash-screen')
