--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "axios": "0.18.0",
     "babel-polyfill": "6.26.0",
     "bignumber.js": "7.2.1",
-    "bip39": "https://github.com/Sotatek-NhuanHoang/bip39",
     "browserify": "16.2.3",
     "core-js": "^2.5.7",
     "crypto-js": "3.1.9-1",
@@ -33,9 +32,9 @@
     "ethereumjs-wallet": "0.6.2",
     "ethers": "3.0.29",
     "google-libphonenumber": "^3.1.15",
-    "hdkey": "1.1.0",
     "laravel-echo": "^1.4.0",
     "lodash": "4.17.11",
+    "lottie-react-native": "2.5.10",
     "microevent": "^1.0.0",
     "moment": "2.22.2",
     "node-libs-react-native": "https://github.com/Sotatek-NhuanHoang/node-libs-react-native",
@@ -44,7 +43,6 @@
     "react-native": "0.56.0",
     "react-native-country-picker-modal": "^0.6.2",
     "react-native-device-info": "^0.24.3",
-    "react-native-dotenv": "0.2.0",
     "react-native-elements": "^0.19.1",
     "react-native-fbsdk": "0.8.0",
     "react-native-flexi-radio-button": "^0.2.2",
@@ -53,6 +51,7 @@
     "react-native-keychain": "3.0.0",
     "react-native-linear-gradient": "2.4.0",
     "react-native-modal": "6.5.0",
+    "react-native-offline": "^3.14.1",
     "react-native-pathjs-charts": "0.0.34",
     "react-native-phone-input": "^0.2.1",
     "react-native-qrcode-svg": "5.1.1",
@@ -79,12 +78,14 @@
   "devDependencies": {
     "babel-eslint": "^9.0.0",
     "babel-jest": "23.4.2",
-    "eslint": "^5.5.0",
+    "eslint": "^5.9.0",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
     "jest": "23.5.0",
+    "react-native-dotenv": "0.2.0",
     "react-test-renderer": "16.4.1"
   },
   "jest": {
