--- a/nodejs-assets/nodejs-project/package.json
+++ b/nodejs-assets/nodejs-project/package.json
@@ -10,6 +10,7 @@
   "author": "janeasystems",
   "license": "",
   "dependencies": {
-    "ethers": "^4.0.4"
+    "ethers": "^4.0.4",
+    "ethereumjs-wallet": "0.6.2"
   }
 }
