--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "rn-viewpager": "^1.2.9",
     "socket.io-client": "^2.1.1",
     "stream-browserify": "2.0.1",
+    "strip-hex-prefix": "1.0.0",
     "url-join": "4.0.0",
     "validate.js": "0.12.0",
     "vm-browserify": "1.1.0",
