--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "microevent": "^1.0.0",
     "moment": "2.22.2",
     "node-libs-react-native": "https://github.com/Sotatek-NhuanHoang/node-libs-react-native",
-    "nodejs-mobile-react-native": "0.3.0",
+    "nodejs-mobile-react-native": "0.4.0",
     "react": "16.4.1",
     "react-native": "0.56.0",
     "react-native-country-picker-modal": "^0.6.2",
@@ -58,7 +58,7 @@
     "react-native-randombytes": "3.5.1",
     "react-native-restart": "0.0.7",
     "react-native-share": "^1.1.2",
-    "react-native-spinkit": "1.1.1",
+    "react-native-spinkit": "^1.2.0",
     "react-native-splash-screen": "^3.1.1",
     "react-native-switch": "^1.5.0",
     "react-native-toasty": "0.0.4",
