--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "crypto-js": "3.1.9-1",
     "ethereumjs-util": "5.2.0",
     "ethereumjs-wallet": "0.6.2",
-    "ethers": "3.0.29",
+    "ethers": "^4.0.27",
     "google-libphonenumber": "^3.1.15",
     "laravel-echo": "^1.4.0",
     "lodash": "4.17.11",
